day-9/app/old/cofre-ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cofre-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /cofre-senhas
        pathType: Prefix
        backend:
          service:
            name: cofre-senhas
            port:
              number: 5000
