day-9/app/old/cofre-ingress-workaround.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cofre-senhas-static
spec:
  rules:
  - http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: cofre-senhas
            port:
              number: 5000
