day-9/app/old/nginx-ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
#  - host: gupoco.nginx.io
#    http:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

# na aula, o LinuxTips pede para alterar o /etc/hosts para criar um alias '127.0.0.1  gupoco.nginx.io'
# nesse computador, não tenho permissão para alterar o arquivo 'C:\Windows\System32\drivers\etc\hosts'
